# yuzu_chart

./: .gitignore  Procfile  README.md  app.py  data_auto_download.py  data_auto_download_for_actions.py  data_download_batch.bat  pyproject.toml  requirements.txt  yuzu_chart_csv.csv  yuzu_data_get.py  yuzu_data_processing.py
.github/workflows/: main.yml
function-source/: main.py  requirements.txt
