[tool.poetry]
name = "yuzu-chart"
version = "0.1.0"
description = ""
authors = ["nijigen-plot <quark_hardcore@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
plotly = "^5.13.1"
numpy = "1.21.0"
pandas = "1.3.5"
dash = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
